--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "api-abuse",
+  "Author": "Yash Patel",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "Yash patel",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.7.1",
     "mysql": "^2.18.1"
   }
