--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "author": "Yash patel",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.12.0",
+    "apollo-server-core": "^3.12.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.1",
+    "express-rate-limit": "^6.9.0",
+    "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.11.5",
     "mysql": "^2.18.1"
   }
 }
